--- a/dhbw-todo/src/App.css
+++ b/dhbw-todo/src/App.css
@@ -26,3 +26,13 @@ body {
   margin-top: 50px;
 
 }
+
+#getNew{
+  width: 0;
+  z-index: 999;
+  height: 40px;
+  position: fixed;
+  top: 120px;
+  left: 0;
+  overflow: hidden;
+}
