--- a/dhbw-todo/src/App.css
+++ b/dhbw-todo/src/App.css
@@ -22,6 +22,7 @@ body {
   top: 0;
   z-index: 1000;
   text-align: center;
+  transition: 1s;
 }
 
 #Homescreen > h1{
@@ -35,10 +36,9 @@ body {
   height: 40px;
   position: fixed;
   top: 120px;
-  left: 0;
+  right: 0;
   overflow: hidden;
-  margin-top: 150px;
-  margin-left: 400px;
+transition: 1s;
 }
 
 #CreateTask {
@@ -47,7 +47,21 @@ body {
 
 
 
-
+input[type=text], button {
+  padding: 5px;
+  font-size: 16px;
+  border-width: 1px;
+  border-color: #fdfdfd;
+  background-color: #fff2f2;
+  color: #000000;
+  border-style: solid;
+  border-radius: 15px;
+  box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+  text-shadow: 0px 0px 5px rgba(66,66,66,.75);
+  height: 30px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
 
 
 
